--- a/static/dashboard/css/welcome.css
+++ b/static/dashboard/css/welcome.css
@@ -1,117 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
+header {
+    background-color: rgba(0, 0, 0, 1);
 }
 
-body{
-    box-sizing: border-box;
-    background-color: white;
-    color: black;
-    position: relative;
-    min-height: 100vh;
-    width: 100%;
-    overflow-y: scroll;
-    margin-bottom: 5%;
-}
-
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-    background-color: #32393E;
-}
-
-li, a, button{
-    font-weight: 500;
-    font-size: 16px;
-    color: white;
-    text-decoration: none;
-}
-
-footer{
-    background-color: black;
-    color: white;
-    text-align: center;
-    padding: 0.5%;
-    width: 100%;
+.banner{
+    top: 0;
     left: 0;
-    bottom: 0;
-    position: fixed;
-}
-
-.logo{
-    cursor: pointer;
-    background-color: #32393E;
-    max-height: 50px;
-    max-width: 90px;
-}
-
-.nav__links{
-    list-style: none;
-    background-color: #32393E;
-}
-
-.nav__links li{
-    display: inline-block;
-    padding: 0px 20px;
-    background-color: #32393E;
-}
-
-.nav__links li a{
-    transition: all 0.3s ease 0s;
-    background-color: #32393E;
-}
-
-.nav__links li a:hover{
-    color: cyan;
-}
-
-button{
-    padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-}
-
-.cta{
-    background-color: #32393E;
-}
-
-button:hover{
-    background-color: rgba(0,136,169,0.8);
-}
-
-h1{
-    background-image: url("../../static/images/welcome.jpg");
     padding-top: 10%;
     padding-bottom: 15%;
     background-repeat: no-repeat;
     background-size: 100%;
+    background-position: 50% 70%;
+    background-attachment: scroll;
     color: white;
     padding-left: 3%;
     font-size: 50px;
 }
 
-h1 button{
+.banner button{
+    animation: buttonIn 1s ease 1s;
     font-size: large;
     padding: 10px 20px;
+    background-color: #0AC8D8;
+}
+
+.banner button:hover{
+    background-color: #079AA6;
+    box-shadow: 0 3px 30px 0 rgba(10, 212, 229, 0.15)
 }
 
 .par{
     padding: 8% 0%;
-    background-color: #DDDDDD;
+    background-color: #F4FAFB;
 }
 
 .par h2{
    margin-left: 5%;
    font-size: 30px; 
-   color: blue;
+   color: #0AC8D8;
 }
 
 .par p{
@@ -127,15 +52,22 @@ h1 button{
     margin-top: 3%;
 }
 
-.box-area{
-    margin-top: 2%;
+.box-area {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px auto;
+    width: 100%;
+    max-width: 80%;
+    justify-content: center;
 }
 
 .box{
     display: inline-block;
     background-color: #EEEEEE;
-    padding: 5% 5%;
+    padding: 40px 40px;
     text-align: left;
+    width: 25%;
+    margin: 10px 10px;
 }
 
 .box h3{
@@ -175,6 +107,77 @@ h1 button{
 }
 
 .q a{
-    color: blue;
-    text-decoration: underline;
+    color: #01a1af;
+    text-decoration: none;
+}
+
+@keyframes buttonIn {
+    from {
+        visibility: hidden;
+        transform: translateY(25px);
+    }
+    to {
+        visibility: visible;
+    }
+}
+
+@keyframes textIn {
+    from {
+        visibility: hidden;
+        top: -50px;
+    }
+    to {
+        visibility: visible;
+        top: 0px;
+    }
+}
+
+.banner-text{
+    position: relative;
+    top: 0px;
+    left: 0;
+    animation: textIn 2s ease 1s;
+}
+
+.animate-left.animate {
+    animation: textInLeft 1.5s ease-in-out;
+    position: inherit;
+}
+
+.animate-right.animate {
+    animation: textInRight 1.5s ease-in-out;
+    position: inherit;
+}
+
+.animate-fade.animate {
+    animation: textFade 1.5s ease;
+}
+
+@keyframes textInLeft {
+    from {
+        visibility: hidden;
+        transform: translate(-50px, -25px);
+    }
+    to {
+        visibility: visible;
+    }
+}
+
+@keyframes textInRight {
+    from {
+        visibility: hidden;
+        transform: translate(50px, 25px);
+    }
+    to {
+        visibility: visible;
+    }
+}
+
+@keyframes textFade {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
