--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -32,7 +32,7 @@
         {% block sidebar %}{% endblock %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js""></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         {% block ending %}{% endblock %}
     </body>
     <br>
