Finish add course

--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -6,6 +6,7 @@ Register
 
 {% block head %} 
 {% load static %}
+<link rel="stylesheet" href="{% static 'account/css/register.css' %}">
 <script src="{% static 'account/js/register.js' %}" type="text/javascript"></script>
 {% endblock %}
 
