--- a/course/templates/course/learn.html
+++ b/course/templates/course/learn.html
@@ -3,7 +3,7 @@
 {% block title %}CS50x: Introduction to programming{% endblock %}
 {% block head %} 
 {% load static %}
-<link rel="stylesheet" href="{% static 'dashboard/css/content-enrolled.css' %}">
+<link rel="stylesheet" href="{% static 'course/css/learn.css' %}">
 {% endblock %}
 
 
@@ -176,5 +176,5 @@ malan@harvard.edu
         </div>
 {% endblock %}
 {% block ending %}
-        <script type="module" src="{% static 'dashboard/js/content-enrolled.js' %}"></script>
+        <script type="module" src="{% static 'course/js/learn.js' %}"></script>
 {% endblock %}
