--- a/course/templates/course/preview.html
+++ b/course/templates/course/preview.html
@@ -3,7 +3,7 @@
 {% block title %}CS50x: Introduction to programming{% endblock %}
 {% block head %} 
 {% load static %}
-<link rel="stylesheet" href="{% static 'dashboard/css/content-unenrolled.css' %}">
+<link rel="stylesheet" href="{% static 'course/css/preview.css' %}">
 {% endblock %}
 
 
@@ -36,5 +36,5 @@
         </div>
 {% endblock %}
 {% block ending %}
-        <script type="module" src="{% static 'dashboard/js/content-unenrolled.js' %}"></script>
+        <script type="module" src="{% static 'course/js/preview.js' %}"></script>
 {% endblock %}
