--- a/course/templates/course/search.html
+++ b/course/templates/course/search.html
@@ -3,7 +3,7 @@
 {% block title %}Search Courses{% endblock %}
 {% block head %} 
 {% load static %}
-<link rel="stylesheet" href="{% static 'dashboard/css/search.css' %}">
+<link rel="stylesheet" href="{% static 'course/css/search.css' %}">
 {% endblock %}
 
 
@@ -48,5 +48,5 @@
             </div>
         </section>
         
-        <script type="module" src="{% static 'dashboard/js/search.js' %}"></script>
+        <script type="module" src="{% static 'course/js/search.js' %}"></script>
 {% endblock %}
