--- a/static/dashboard/css/welcome.css
+++ b/static/dashboard/css/welcome.css
@@ -2,6 +2,10 @@ header {
     background-color: rgba(0, 0, 0, 1);
 }
 
+.home_section {
+    margin-bottom: -70px;
+}
+
 .banner{
     top: 0;
     left: 0;
@@ -14,6 +18,7 @@ header {
     color: white;
     padding-left: 3%;
     font-size: 50px;
+    z-index: 99;
 }
 
 .banner button{
