--- a/static/main/css/main.css
+++ b/static/main/css/main.css
@@ -71,7 +71,7 @@ footer{
 
 button{
     padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
+    background-color: rgb(0, 162, 202);
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -93,10 +93,16 @@ button:hover{
     background-color: #323950;
     top: 0;
     left: 0;
-    padding: 6px 14px;
+    padding: 6px 14px 200px 14px;
     transition: all 0.5s ease;
+    overflow-y: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
+.sidebar::-webkit-scrollbar {
+        display: none;
+}
 .sidebar.active{
     width: 250px;
 }
@@ -234,6 +240,7 @@ button:hover{
 
 .home_section{
     transition: 0.5s ease;
+    margin-bottom: 30px;
 }
 
 .home_section.active{
@@ -261,3 +268,6 @@ input:focus {
     height: 45px;
 }
 
+.last {
+    margin-bottom: 50px;
+}
