Update preview page

--- a/course/templates/course/preview.html
+++ b/course/templates/course/preview.html
@@ -1,6 +1,6 @@
 {% extends "main/main_dashboard.html" %}
 
-{% block title %}CS50x: Introduction to programming{% endblock %}
+{% block title %}{{course.name}}{% endblock %}
 {% block head %} 
 {% load static %}
 <link rel="stylesheet" href="{% static 'course/css/preview.css' %}">
@@ -10,31 +10,32 @@
 {% block content %}
         <div class="content">
             <div class="course">
-                <h2>CS50x: Introduction to programming</h2>
+                <h2>{{course.name}}</h2>
                 <button class="Enroll">Enroll</button>
             </div>
             <div class="details">
                 <h3>Details</h3>
                 <div class="about">
                     <h4>About The Course</h4>
-                    <p>Introduction to the intellectual enterprises of computer science and the art of programming. This course teaches students how to think algorithmically and solve problems efficiently. Topics include abstraction, algorithms, data structures, encapsulation, resource management, security, software engineering, and web programming. Languages include C, Python, and SQL plus HTML, CSS, and JavaScript. Problem sets inspired by the arts, humanities, social sciences, and sciences. Course culminates in a final project. Designed for concentrators and non-concentrators alike, with or without prior programming experience. Two thirds of CS50 students have never taken CS before. Among the overarching goals of this course are to inspire students to explore unfamiliar waters, without fear of failure, create an intensive, shared experience, accessible to all students, and build community among students.</p>
+                    <p>{{course.description}}</p>
                 </div>
                 <div class="instructor">
                     <h4>Instructors</h4>
                     <div class="instructors">
+                        {% for instructor in instructors %}
                         <div class="profile">
-                            <img src="../../static/images/instructor.jpg">
-                            <p>David J Mallan</p>
+                            <img src="/media/{{instructor.profile_image}}">
+                            <p>{{ instructor.name }}</p>
                         </div>
-                        <div class="profile">
-                            <img src="../../static/images/instructor2.jpg">
-                            <p>Brian Yu</p>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
         </div>
 {% endblock %}
 {% block ending %}
-        <script type="module" src="{% static 'course/js/preview.js' %}"></script>
+<script type="module" src="{% static 'course/js/preview.js' %}"></script>
+<script type="text/javascript">
+    $(".course").css("background-image", "linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/media/{{course.banner_image}})")
+</script>
 {% endblock %}
